# hep-ce

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CODE_OF_CONDUCT.md  Dockerfile  Doxyfile  README.md  README.org  SECURITY.md  aging_8hpp.html  aging_8hpp.js  aging_8hpp__dep__incl.map  aging_8hpp__dep__incl.md5  aging_8hpp__incl.map  aging_8hpp__incl.md5  aging_8hpp_source.html  all__events_8hpp.html  all__events_8hpp__incl.map  all__events_8hpp__incl.md5  all__events_8hpp_source.html  annotated.html  annotated_dup.js  base__events_8hpp.html  base__events_8hpp__dep__incl.map  base__events_8hpp__dep__incl.md5  base__events_8hpp__incl.map  base__events_8hpp__incl.md5  base__events_8hpp_source.html  behavior__changes_8hpp.html  behavior__changes_8hpp.js  behavior__changes_8hpp__dep__incl.map  behavior__changes_8hpp__dep__incl.md5  behavior__changes_8hpp__incl.map  behavior__changes_8hpp__incl.md5  behavior__changes_8hpp_source.html  behavior__events_8hpp.html  behavior__events_8hpp__dep__incl.map  (+627 more)
src/: CMakeLists.txt  Simulation.cpp  main.cpp  run.cpp  run.hpp
src/cost/: CMakeLists.txt  Cost.cpp
src/cost/include/: Cost.hpp
src/data/: CMakeLists.txt  Data.cpp  DataWriter.cpp  SQLite3.cpp  types.cpp  writer.cpp
src/data/include/: Data.hpp  DataWriter.hpp  SQLite3.hpp
src/data/internals/: writer_internals.hpp
src/event/: Aging.cpp  BehaviorChanges.cpp  CMakeLists.txt  Clearance.cpp  Death.cpp  DiseaseProgression.cpp  Event.cpp  EventBase.cpp  EventFactory.cpp  Fibrosis.cpp  FibrosisProgression.cpp  FibrosisStaging.cpp  Growth.cpp  HCC.cpp  HCVLinking.cpp  HCVScreening.cpp  HCVTreatment.cpp  HIVInfections.cpp  HIVLinking.cpp  HIVScreening.cpp  HIVTreatment.cpp  Infections.cpp  Linking.cpp  MOUD.cpp  Overdose.cpp  Pregnancy.cpp  ScreenageLinking.cpp  Screening.cpp  Treatment.cpp  VoluntaryRelinking.cpp  aging.cpp  behavior_changes.cpp  death.cpp  event_factory.cpp  hcv_clearance.cpp  hcv_infection.cpp  hcv_linking.cpp  hcv_screening.cpp  hcv_treatment.cpp  hcv_voluntary_relink.cpp  (+9 more)
src/event/base/: aging.cpp  death.cpp
src/event/behavior/: behavior_changes.cpp  moud.cpp  overdose.cpp  pregnancy.cpp
src/event/fibrosis/: progression.cpp  staging.cpp
src/event/hcv/: clearance.cpp  infection.cpp  linking.cpp  screening.cpp  treatment.cpp  voluntary_relink.cpp  vountary_relink.cpp
src/event/hiv/: infection.cpp  linking.cpp  screening.cpp  treatment.cpp
src/event/include/: Aging.hpp  AllEvents.hpp  BehaviorChanges.hpp  Clearance.hpp  Death.hpp  DiseaseProgression.hpp  Event.hpp  EventBase.cpp  EventFactory.hpp  Fibrosis.hpp  FibrosisProgression.hpp  FibrosisStaging.hpp  Growth.hpp  HCC.hpp  HCVInfections.hpp  HCVLinking.hpp  HCVTreatment.hpp  HIVInfections.hpp  HIVLinking.hpp  HIVScreening.hpp  Infections.hpp  Linking.hpp  MOUD.hpp  Overdose.hpp  Pregnancy.hpp  ScreenageLinking.hpp  Screening.hpp  Treatment.hpp  VoluntaryRelinking.hpp
src/event/internals/: aging_internals.hpp  all_events.hpp  base_event_internals.hpp  base_linking_internals.hpp  base_screening_internals.hpp  base_treatment_internals.hpp  behavior_changes_internals.hpp  death_internals.hpp  event_internals.hpp  hcc_internals.hpp  hcv_clearance_internals.hpp  hcv_infection_internals.hpp  hcv_linking_internals.hpp  hcv_screening_internals.hpp  hcv_treatment_internals.hpp  hcv_voluntary_relink_internals.hpp  hiv_infection_internals.hpp  hiv_linking_internals.hpp  hiv_screening_internals.hpp  hiv_treatment_internals.hpp  linking_internals.hpp  moud_internals.hpp  overdose_internals.hpp  pregnancy_internals.hpp  progression_internals.hpp  screening_internals.hpp  staging_internals.hpp  treatment_internals.hpp
src/include/: Data.hpp  Event.hpp  Person.hpp  Simulation.hpp
src/inputs/: CMakeLists.txt  Inputs.cpp
src/inputs/include/: Inputs.hpp
src/model/: costing.cpp  person.cpp  sampler.cpp  simulation.cpp  utility.cpp
src/model/internals/: cost_internals.hpp  costing_internals.hpp  person_internals.hpp  sampler_internals.hpp  simulation_internals.hpp  utility_internals.hpp
src/person/: CMakeLists.txt  ContainerOperators.cpp  Maps.cpp  Person.cpp  PersonFactory.cpp
src/person/include/: Containers.hpp  Maps.hpp  Person.hpp  PersonFactory.hpp  PersonTableOperations.hpp
src/simulation/: CMakeLists.txt  Simulation.cpp  run.cpp
src/simulation/include/: Simulation.hpp  run.hpp
src/stats/: CMakeLists.txt  Decider.cpp
src/stats/include/: Decider.hpp
src/utility/: CMakeLists.txt  Utility.cpp
src/utility/include/: Utility.hpp
src/utils/: CMakeLists.txt  ConfigUtils.cpp  Utils.cpp  logging.cpp
src/utils/include/: ConfigUtils.hpp  Utils.hpp
src/utils/internals/: logging_internals.hpp
test/: CMakeLists.txt  EventTest.cpp  PersonTest.cpp  SimTest.cpp
tests/: CMakeLists.txt  CostTest.cpp  EventTest.cpp  InputTest.cpp  PersonTest.cpp  SimTest.cpp
tests/constants/: config.hpp  inputs_db.hpp  utility.hpp
tests/mocks/: DataManagerMock.hpp  DeciderMock.hpp  MockDataTable.hpp  PersonMock.hpp  costing_mock.hpp  person_mock.hpp  sampler_mock.hpp
tests/src/: CostTest.cpp  DataWriterTest.cpp  EventTest.cpp  PersonTest.cpp  SimTest.cpp  UtilityTest.cpp
tests/src/data/: types_test.cpp  writer_test.cpp
tests/src/event/: BehaviorChangesTest.cpp  EventTest.cpp  FibrosisProgressionTest.cpp  FibrosisStagingTest.cpp  HCVLinkingTest.cpp  HCVTreatmentTest.cpp  MOUDTest.cpp  VoluntaryRelinkingTest.cpp  aging_test.cpp  behavior_changes_test.cpp  death_test.cpp  event_test.cpp  pregnancy_test.cpp
tests/src/eventtests/: AgingTest.cpp  BehaviorChangesTest.cpp  ClearanceTest.cpp  DeathTest.cpp  EventTest.cpp  FibrosisProgressionTest.cpp  FibrosisStagingTest.cpp  HCVInfectionsTest.cpp  HCVLinkingTest.cpp  HCVScreeningTest.cpp  HCVTreatmentTest.cpp  HIVInfectionsTest.cpp  HIVLinkingTest.cpp  HIVScreeningTest.cpp  InfectionsTest.cpp  LinkingTest.cpp  MOUDTest.cpp  OverdoseTest.cpp  PregnancyTest.cpp  ScreeningTest.cpp  TreatmentTest.cpp  VoluntaryRelinkingTest.cpp
tests/src/model/: cost_test.cpp  costing_test.cpp  person_test.cpp  sampler_test.cpp  (+2 more)
(+302 files in other folders)
